After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 762284 - removing event and closing application right after doesn't remove event
removing event and closing application right after doesn't remove event
Status: RESOLVED FIXED
Product: gnome-calendar
Classification: Applications
Component: General
3.19.x
Other Linux
: Normal minor
: 3.26
Assigned To: GNOME Calendar maintainers
GNOME Calendar maintainers
Depends on:
Blocks:
 
 
Reported: 2016-02-18 17:27 UTC by Marinus Schraal
Modified: 2017-04-17 18:20 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
window: remove queued event on finalize (1.17 KB, patch)
2016-02-18 17:40 UTC, Georges Basile Stavracas Neto
committed Details | Review

Description Marinus Schraal 2016-02-18 17:27:34 UTC
When deleting an event, if you close the application right after the event doesn't actually get deleted. On next start the event is still there.

As an added if I then open this event and click 'Done' the app crashes (this is reproducible for me).
Comment 1 Georges Basile Stavracas Neto 2016-02-18 17:40:39 UTC
Created attachment 321607 [details] [review]
window: remove queued event on finalize

A quick fix after the introduction of GcalEvent.
Comment 2 Georges Basile Stavracas Neto 2016-02-18 17:41:04 UTC
Attachment 321607 [details] pushed as 0797505 - window: remove queued event on finalize